Gap fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,6 @@ body {
 
 /* ========== HEADER ========== */
 .page-header {
-  padding: 24px 0;
   border-bottom: 1px solid var(--accent-color);
 }
 
@@ -111,6 +110,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: baseline;
+  padding: 24px 0;
 }
 
 .main-nav {
@@ -136,7 +136,7 @@ body {
 .main-menu {
   display: flex;
   align-items: center;
-  column-gap: 40px;
+  gap: 40px;
 }
 
 .menu-link {
@@ -159,7 +159,7 @@ body {
 .address-list {
   display: flex;
   align-items: center;
-  column-gap: 40px;
+  gap: 40px;
 }
 
 .address-link {
@@ -182,17 +182,14 @@ body {
   padding: 188px 0;
 }
 
-.hero-container {
-  width: 496px;
-  margin: 0 auto;
-}
-
 .hero-title {
   color: var(--white-color);
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
   text-align: center;
+  max-width: 496px;
+  margin: 0 auto;
 }
 
 .hero-btn {
@@ -208,6 +205,8 @@ body {
   margin: 48px auto 0;
   border-radius: 4px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  min-width: 169px;
+  height: 56px;
 }
 
 .hero-btn:hover,
@@ -219,7 +218,7 @@ body {
 /* ========== BENEFITS ========== */
 .benefits {
   display: flex;
-  column-gap: 24px;
+  gap: 24px;
 }
 
 .benefits-card-title {
@@ -246,7 +245,7 @@ body {
 
 .services {
   display: flex;
-  column-gap: 24px;
+  gap: 24px; 
 }
 .services-item {
   flex-basis: calc((100% - 2 * 24px) / 3);
@@ -257,7 +256,7 @@ body {
 /* ========== OUR TEAM ========== */
 .team {
   display: flex;
-  column-gap: 24px;
+  gap: 24px; 
 }
 
 .team-section {
@@ -317,11 +316,13 @@ body {
   line-height: 1.5;
   letter-spacing: 0.64px;
   padding: 12px 24px;
+  border-radius: 4px;
 }
 
 .filter-btn:hover,
 .filter-btn:focus {
   background-color: var(--hover-color);
+  border: 1px solid transparent;
   color: var(--white-color);
 }
 
@@ -365,10 +366,8 @@ body {
   color: var(--ligth-background-color);
 }
 
-.footer-content {
-  width: 264px;
-}
 .footer-logo {
+  display: inline-block;
   margin-bottom: 16px;
 }
 
@@ -377,5 +376,6 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.32px;
+  max-width: 264px;
 }
 /* ========== /FOOTER ========== */
